--- a/style.css
+++ b/style.css
@@ -1,65 +1,54 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-size: 100%;
-	color: inherit;
-	text-decoration: inherit;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-weight: normal;
 }
 
 body {
-	background: #222;
-	color: #DDD;
-	font-family: Lato, sans-serif;
-	font-size: 15px;
-	padding: 40px;
-	background: #222 url('./bg.jpg') center no-repeat;
-	background-size: cover;
+    font-family: 'Open sans condensed', sans-serif;
+    background: #fbf7ef;
 }
 
 main {
-	max-width: 600px;
-	margin: 100px auto 0;
-}
-
-@media screen and (max-width: 800px) {
-	main {
-		margin-top: 0;
-	}
+    min-height: 95vh;
+    padding: 120px 30px;
 }
 
 h1 {
-	display: none;
-}
-header img {
-	width: 100%;
-	max-width: 300px;
-}
-header {
-	padding-bottom: 10px;
-	border-bottom: 80px solid #316a91;
-}
-
-a {
-	color: #AAA;
+    text-indent: -10000px;
+    overflow: hidden;
+    background: url('blue_baron.svg') center no-repeat;
+    background-size: 300px;
+    margin: 0 auto 60px;
+    height: 300px;
+    width: 220px;
+    position: relative;
+    left: 10px;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
-
-ul {
-	list-style: none;
-}
-
-#gigs {
-	margin-top: 60px;
-}
-
-#contact {
-	margin: 40px 0;
+section {
+    margin: 30px auto;
+    max-width: 400px;
+    text-align: center;
 }
 
 h2 {
-	margin-bottom: 5px;
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 30px;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    color: #006;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    margin-bottom: 50px;
+    filter: grayscale(50%);
 }
